<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <TextView
            android:id="@+id/introItemTittleView"
            style="@style/IntroTittleStyle"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/intro_first_tittle"
            android:layout_marginTop="5dp"
    />


    <TextView
            android:id="@+id/introItemShortDescriptionView"
            style="@style/IntroBaseTextStyle"
            android:textAlignment="center"
            app:layout_constraintVertical_bias=".1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introItemTittleView"
            app:layout_constraintBottom_toTopOf="@id/introItemImgView"
            android:text="@string/intro_first_short_desc"/>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1"
    />

    <ImageView
            android:id="@+id/introItemImgView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/facebook_icon"
            app:layout_constraintTop_toTopOf="@+id/guideLineSecond"
            app:layout_constraintBottom_toBottomOf="@id/guideLineThird"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
    />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
    />

    <TextView
            android:id="@+id/introItemDescriptionView"
            style="@style/IntroBaseTextStyle"
            android:textAlignment="center"
            android:text="@string/intro_first_desc"
            app:layout_constraintTop_toBottomOf="@id/introItemImgView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="40dp"
            android:padding="10dp"

    />

    <TextView
            android:id="@+id/introItemUnderDescLinkView"
            style="@style/IntroBaseTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/introItemDescriptionView"
            android:text="@string/tags_starter_pack_link_text"
            android:layout_marginTop="20dp"
            android:textColor="@color/underDescriptionLinkColor"

    />



</androidx.constraintlayout.widget.ConstraintLayout>